switch to Java 21